2007-11-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.[ch]:
	Convert unmount volume to gio
	Remove unmount drive (makes no sense!)
	
        * src/nautilus-places-sidebar.c:
	Use new APIs

2007-11-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        (nautilus_file_get_uri_scheme):
	Better get_uri_scheme implementation
	
        * libnautilus-private/nautilus-mime-actions.[ch]:
	Remove the open_with versions (not needed anymore)
	Add support for uri_handlers
	
        * libnautilus-private/nautilus-program-choosing.[ch]:
	Remove now unused function nautilus_launch_show_file
	
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-information-panel.c:
        * src/nautilus-window.c:
	Update for above api changes

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-dnd.c:
	Convert default dnd op to gio code

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-search-engine-simple.c:
	Update to changed gio API

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
	Remove more unused gnome-vfs helpers

2007-10-31  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-icon-view.c (play_file):
	Use a better pipeline for audio preview (doesn't play videos)
	Add back totem preview app.

        * libnautilus-private/nautilus-file.c:
        (nautilus_file_get_volume_name):
	Get volume name using gio
	
        * src/file-manager/fm-properties-window.c:
	Show volume name for non local files too
	Avoid crashes if query fsinfo fails

2007-10-30  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-program-choosing.c:
        (nautilus_launch_show_file):
	Avoid gnome_vfs calls

2007-10-30  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-canvas-item.c: